fix jumping agents content

--- a/src/app/features/agents/agent-news/agent-news.component.scss
+++ b/src/app/features/agents/agent-news/agent-news.component.scss
@@ -1,4 +1,5 @@
 .container {
+  min-height: 300px;
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 80%;
